# event-planner

./: ajuda.py  mk.txt  mkdocs.yml  pyproject copy.toml  pyproject.toml
backend/: app.py  extensions.py
backend/dto/: __init__.py  person.py  user.py
backend/models/: base.py  person.py  user.py
backend/resources/: person.py  user.py
backend/schemas/: person.py  user.py
backend/services/: __init__.py  base.py  person.py  user.py
